--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Azure Multi Language Test</string>
+    <string name="select_language_below">Select Language below</string>
+    <string name="start">Start</string>
+    <string-array name="languages">
+        <item>Cantonese</item>
+        <item>Mandarin</item>
+        <item>English</item>
+
+    </string-array>
+
 </resources>
